fdo#66324 fix locking in webdav_ucp::Content::getResourceType()

Crash in there while accessing an evidently deleted DAVResourceAccess
instance with about 4 other threads also in various webdav_ucp::Content
methods.

The problem is apparently that the "outer" getResourceType() passes the
m_xResAccess to the "inner" getResourceType(), which accesses it
without locking the mutex, while another thread resets m_xResAccess
and thereby deletes the current instance.

(regression from 0c3500115c4fd86284a027fc32be704afcf77061)

Change-Id: I1c67021c536e303d766c7ff93fb71e40f991f3af
(cherry picked from commit 49a454225e35699d7351faaba3d296e1858c6107)
Reviewed-on: https://gerrit.libreoffice.org/4650
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>